<resources>
    <string name="app_name">M3TS</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="benchmark_finished_toast_text">Benchmark finished, check logcat for results!</string>
    <string name="play_button_text">Play</string>
    <string name="stop_button_text">stop</string>
    <string name="benchmark_play_button_text">Start Benchmarking</string>
    <string name="benchmark_stop_button_text">Benchmarking in progress…</string>
    <string name="errorMsgPermissions">Sorry, cannot use M3TS unless all permissions are granted</string>
    <string name="idDisplay">m3ts_display</string>
    <string name="idTracker">m3ts_tracker</string>
    <string name="errorMsgNearbyConnection">Failed to request connection to the other device. Try again or switch to PubNub connection (settings).</string>

...
    <string name="prefHeaderDetection">Detection</string>
    <string name="prefColorSpace">Color space</string>
    <string name="prefColorSpaceDefault">gray</string>
    <string name="prefProcRes">Processing resolution</string>
    <string name="prefProcResDefault">600</string>
    <string name="prefHeaderVelocity">Velocity estimation</string>
    <string name="prefHeaderDebug">Developer Options</string>

    <!-- Game settings -->
    <string name="prefHeaderGame">Game</string>
    <string name="prefPlayer1Name">Name of left Player</string>
    <string name="prefPlayer1NameDefault">Hans</string>
    <string name="prefPlayer1Key">player_1</string>
...
    <string name="prefFrameRate">Precise frame rate [Hz]</string>
    <string name="prefFrameRateDefault">30.00</string>
    <string name="prefHeaderTracker">Tracking Settings</string>
    <string name="runBenchmark">Run benchmark</string>

    <!-- Velocity estimation settings -->
    <string name="runVideoPlayer">Run a replay</string>
    <string name="prefDisableDetection">Disable FMO detection</string>

    <!-- Advanced settings -->
    <string name="prefPubnub">Connect with pubnub</string>
    <string name="prefPubnubDefault">false</string>
    <string name="prefPubnubKey">connect_pubnub</string>
    <string name="prefBenchmark">Benchmark</string>

    <string name="playerLeftDefaultName">Player 1</string>
    <string name="playerRightDefaultName">Player 2</string>
    <string name="gameScoreStart">0</string>
    <string name="gameScoreDivider">:</string>
    <string name="debugBallShotLabel">Ball shot from:</string>
    <string name="debugBallBounceLabel">Bounce count:</string>
    <string name="debugBallShotStart">None</string>
    <string name="debugBallCountStart">0</string>
    <string name="contentDescRevert">reverts last selected corner</string>
    <string name="initMarkTableLabel">Mark the left and right table corner</string>
    <string name="initMoveDeviceMsg">Move the device until the white line is somewhat aligned with the net</string>
    <string name="trackerStatusConnectedWithDisplay">connected to server</string>
    <string name="trackerStatusConnectedWithDisplayFail">unable to connect to display!</string>
...
