...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:keepScreenOn="true">
    <include layout="@layout/camera_surface_view" />
    <SurfaceView
        android:id="@+id/playMovie_surfaceTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#00FFFFFF" />
    <SurfaceView
        android:id="@+id/playMovie_surfaceTracks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#00FFFFFF" />
    <RelativeLayout
        android:layout_width="match_parent"
...
