...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/play_stop_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/play_button_text" />

        <Spinner
            android:id="@+id/playMovieFile_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/play_stop_button"
            android:layout_alignTop="@id/play_stop_button"
            android:layout_toEndOf="@id/play_stop_button" />

...
