...
                    android:inputType="textPersonName"
                    android:hint="HoloLens IP address"
                    tools:visibility="visible" />
            </GridLayout>

            <ImageButton
                android:id="@+id/live_settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
...
